--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -7,7 +7,6 @@ footer {
     background-color: #335468;
     display: flex;
     justify-content: center;
-    transition: background-color 0.3s linear
 }
 .footerContent {
     font-family: Marmelad, Arial, Helvetica, sans-serif;
@@ -16,7 +15,6 @@ footer {
 }
 .footerContent a {
     color: gold;
-    transition: color 0.15s ease-in;
 }
 
 .footerContent a:hover {
