--- a/static/css/index.css
+++ b/static/css/index.css
@@ -5,7 +5,6 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    transition: background-color 0.3s linear
 }
 
 .highlight {
