--- a/static/css/team.css
+++ b/static/css/team.css
@@ -28,7 +28,6 @@ h1, h2, h3, h4, h5 {
     min-height: 600px;
     justify-content: space-between;
     padding: 16px;
-    transition: background-color 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
 }
 
 body.dark-mode .content .memberName {
